# rust-first-pain

./: Cargo.toml
src/: prime.rs  scalar.rs
src/lab3/: main.rs  prime.rs  scalar.rs
src/sortings/: bubble.rs  main.rs
src/sortings/bubble/tests/: util.rs
